--- a/Midterm_DL_2025.ipynb
+++ b/Midterm_DL_2025.ipynb
@@ -13,7 +13,11 @@
         "\n",
         "The goal is to fine-tune a Llama-3-8B model to predict if a given solution to a math problem is correct or not. Your model should output True if the solution is correct, and False otherwise.\n",
         "\n",
-        "This notebook is use 80000 questions for training and achived an accuracy of around 86%"
+        "This notebook is use 80000 questions for training and achived an accuracy of around 86%\n",
+        "\n",
+        "The final result was submitted to https://www.kaggle.com/competitions/dl-fall-25-kaggle-contest/\n",
+        "\n",
+        "Team name AUV888"
       ]
     },
     {
