--- a/Midterm_DL_2025.ipynb
+++ b/Midterm_DL_2025.ipynb
@@ -476,11 +476,10 @@
         "    labels = input_ids.clone()\n",
         "    pad_id = tokenizer.pad_token_id\n",
         "\n",
-        "    # 兼容多种 Output 写法\n",
         "    templates = [\"\\nOutput:\\n\", \"\\nOutput:\", \"Output:\\n\", \"Output:\", \"Output: \"]\n",
         "    templ_ids_list = [tokenizer(t, add_special_tokens=False).input_ids for t in templates]\n",
         "    B, L = input_ids.shape\n",
-        "    labels[:] = -100  # 默认全忽略\n",
+        "    labels[:] = -100\n",
         "\n",
         "    for i in range(B):\n",
         "        ids = input_ids[i].tolist()\n",
@@ -491,14 +490,12 @@
         "            for tpl in templ_ids_list:\n",
         "                tlen = len(tpl)\n",
         "                if tlen and j + tlen <= L and ids[j:j+tlen] == tpl:\n",
-        "                    starts.append(j + tlen)   # 监督从模板末尾之后开始\n",
-        "                    j += tlen\n",
+        "                    starts.append(j + tlen)\n",
         "                    matched = True\n",
         "                    break\n",
         "            if not matched:\n",
         "                j += 1\n",
         "\n",
-        "        # 对每一段 Output 区间开启监督（支持 packing 的多段）\n",
         "        for k, st in enumerate(starts):\n",
         "            ed = starts[k+1] if (k + 1) < len(starts) else L\n",
         "            if st < ed:\n",
