--- a/Midterm_DL_2025.ipynb
+++ b/Midterm_DL_2025.ipynb
@@ -479,7 +479,7 @@
         "    templates = [\"\\nOutput:\\n\", \"\\nOutput:\", \"Output:\\n\", \"Output:\", \"Output: \"]\n",
         "    templ_ids_list = [tokenizer(t, add_special_tokens=False).input_ids for t in templates]\n",
         "    B, L = input_ids.shape\n",
-        "    labels[:] = -100\n",
+        "    labels[:] = -100 \n",
         "\n",
         "    for i in range(B):\n",
         "        ids = input_ids[i].tolist()\n",
@@ -490,7 +490,8 @@
         "            for tpl in templ_ids_list:\n",
         "                tlen = len(tpl)\n",
         "                if tlen and j + tlen <= L and ids[j:j+tlen] == tpl:\n",
-        "                    starts.append(j + tlen)\n",
+        "                    starts.append(j + tlen) \n",
+        "                    j += tlen\n",
         "                    matched = True\n",
         "                    break\n",
         "            if not matched:\n",
